Fixed overlapping mathjax bug

--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ header {
     border-radius: 14px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     top: 70px;
+    z-index : 100
 }
 
 .nav-menu.show {
